[tool.poetry]
name = "relation-project"
version = "0.1.0"
description = ""
authors = ["midterm <midterm@naver.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "relation_project"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
